// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CarouselNavButtons component renders both buttons when not on first or last slide 1`] = `
<body>
  <div>
    <div
      aria-label="Навігація каруселі"
      class="absolute hidden gap-2 tablet:-top-80 tablet:right-16 tablet:flex desktop:-top-130 desktop:right-56 desktop:flex"
      data-testid="carousel-nav-wrapper-test-id"
      role="group"
    >
      <button
        aria-label="Попередній слайд"
        data-testid="carousel-nav-prev-test-id"
        style="opacity: 0;"
      >
        <img
          alt=""
          aria-hidden="true"
          class="h-40 w-40 rotate-180 desktop:h-44 desktop:w-44"
          data-nimg="1"
          decoding="async"
          height="40"
          loading="lazy"
          src="/icons/nav/row.svg"
          style="color: transparent;"
          width="40"
        />
      </button>
      <button
        aria-label="Наступний слайд"
        data-testid="carousel-nav-next-test-id"
        style="opacity: 0;"
      >
        <img
          alt=""
          aria-hidden="true"
          class="h-40 w-40 desktop:h-44 desktop:w-44"
          data-nimg="1"
          decoding="async"
          height="40"
          loading="lazy"
          src="/icons/nav/row.svg"
          style="color: transparent;"
          width="40"
        />
      </button>
    </div>
  </div>
</body>
`;

exports[`CarouselNavButtons component renders no buttons when on first and last slide (edge case) 1`] = `
<body>
  <div>
    <div
      aria-label="Навігація каруселі"
      class="absolute hidden gap-2 tablet:-top-80 tablet:right-16 tablet:flex desktop:-top-130 desktop:right-56 desktop:flex"
      data-testid="carousel-nav-wrapper-test-id"
      role="group"
    />
  </div>
</body>
`;

exports[`CarouselNavButtons component renders the next button when not on the last slide 1`] = `
<body>
  <div>
    <div
      aria-label="Навігація каруселі"
      class="absolute hidden gap-2 tablet:-top-80 tablet:right-16 tablet:flex desktop:-top-130 desktop:right-56 desktop:flex"
      data-testid="carousel-nav-wrapper-test-id"
      role="group"
    >
      <button
        aria-label="Наступний слайд"
        data-testid="carousel-nav-next-test-id"
        style="opacity: 0;"
      >
        <img
          alt=""
          aria-hidden="true"
          class="h-40 w-40 desktop:h-44 desktop:w-44"
          data-nimg="1"
          decoding="async"
          height="40"
          loading="lazy"
          src="/icons/nav/row.svg"
          style="color: transparent;"
          width="40"
        />
      </button>
    </div>
  </div>
</body>
`;

exports[`CarouselNavButtons component renders the previous button when not on the first slide 1`] = `
<body>
  <div>
    <div
      aria-label="Навігація каруселі"
      class="absolute hidden gap-2 tablet:-top-80 tablet:right-16 tablet:flex desktop:-top-130 desktop:right-56 desktop:flex"
      data-testid="carousel-nav-wrapper-test-id"
      role="group"
    >
      <button
        aria-label="Попередній слайд"
        data-testid="carousel-nav-prev-test-id"
        style="opacity: 0;"
      >
        <img
          alt=""
          aria-hidden="true"
          class="h-40 w-40 rotate-180 desktop:h-44 desktop:w-44"
          data-nimg="1"
          decoding="async"
          height="40"
          loading="lazy"
          src="/icons/nav/row.svg"
          style="color: transparent;"
          width="40"
        />
      </button>
    </div>
  </div>
</body>
`;
